# compass

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CTestLists.txt  Jenkinsfile  LICENSE  README.md  appveyor.yml
cmake/: FindCPU_FEATURES.cmake  OptimizeForArchitecture.cmake  compassConfig.cmake.in  git_utils.cmake
include/: compass.hpp
include/detail/: api.hpp  bit_view.hpp  compass_detail.hpp  compass_tags.hpp  definitions.hpp  dispatch.hpp  tags.hpp
include/detail/ct/: compass_gnu_impl.hpp  compass_llvm_impl.hpp  compass_msvc_impl.hpp  detect_arch.hpp  detect_compiler.hpp  detect_os.hpp  gnu_impl.hpp  llvm_impl.hpp  msvc_impl.hpp  power_impl.hpp  preprocessor_impl.hpp
include/detail/rt/: linux_based_impl.hpp  linux_os_impl.hpp  power_impl.hpp  through_os_impl.hpp  unsupported_impl.hpp  x86_cpuid.hpp  x86_impl.hpp  x86_meta.hpp  x86_sizes.hpp
include/detail/rt/x86/: cpuid_common.hpp  gnu_cpuid.hpp  intel_cpuid.hpp  llvm_cpuid.hpp  msvc_cpuid.hpp
single_include/: compass.hpp
tests/: CMakeLists.txt  build_machine.hpp.in  compass_fixture.hpp  machine_info.hpp  test_bitview.cpp  test_build_machine.cpp  test_compass_impl.cpp  test_compass_sizes.cpp  test_machine.cpp  test_power8_impl.cpp  test_single_header.cpp
